<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="grow_your_garden">Grow Your Garden</string>
    <string name="garden_essentials">Garden Essentials</string>
    <string name="title_activity_receipt_score_card">Receipt Scorecard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Green Grocer</string>
    <string name="title_garden">Garden</string>
    <string name="title_rscan">Scan Receipt</string>
    <string name="title_pscan">Scan Product</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create New Account</string>
    <string name="sign_in">Sign in</string>
    <string name="product_identified">Product Identified</string>
    <string name="correct">Correct</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="faqs">FAQS</string>
    <string name="faqs_text">
        <b>Q:How do I earn points?</b>\n
        A:By making sustainable purchases.
        \n\n
        <b>Q:Why can\’t I buy some of the plants?</b>\n
        A:You may not have enough points to buy some of the plants.
        \n\n
        <b>Q:How is the sustainability rating calculated?</b>\n
        A:The characteristics factored into a product\'s sustainability rating are its seasonality, water usage, the amount of CO2 emissions, quality, and price. Each characteristic is individually rated and given a letter grade ranging from the highest grade of an A to the lowest grade F. The individual ratings are then averaged to get the sustainability rating, which also follows the A-F grading system.
        \n\n
        <b>Q:Question 3 </b>\n
        A:Answer 3
        \n\n
        If you have any other questions, please contact us at XXX-XXX-XXXX or XXX@XXX.XXX
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="garden_name">Garden Name</string>
    <string name="update">Update</string>
    <string name="location_services">Enable Location Services</string>
    <string name="frequently_asked_questions">Frequently Asked Questions \></string>
</resources>