<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_garden">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.moonen.charles.greengrocery.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_garden"
        android:name="io.moonen.charles.greengrocery.ui.home.HomeFragment"
        android:label="@string/title_garden"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rscan"
        android:name="io.moonen.charles.greengrocery.ui.rscan.RScanFragment"
        android:label="@string/title_rscan"
        tools:layout="@layout/fragment_rscan" />

    <fragment
        android:id="@+id/navigation_pscan"
        android:name="io.moonen.charles.greengrocery.ui.pscan.PScanFragment"
        android:label="@string/title_pscan"
        tools:layout="@layout/fragment_productscansearch" />
</navigation>