<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1EFCC"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/greengrocerlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/app_name"
        android:textColor="#47525E"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="336dp"
        android:focusable="true"
        android:hint="Username"
        android:inputType="text"
        android:textColorHint="#47525E" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:focusable="true"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#47525E" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="485dp"
        android:text="@string/forgot_password"
        android:textColor="#47525E" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:text="@string/create_account"
        android:textColor="#47525E"
        android:textSize="22sp" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:backgroundTint="#47525E"
        android:text="@string/sign_in"/>

</RelativeLayout>